--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
             <div class="folium-map" id="map_32973fe62b464e47937708c8849aef99" ></div>
 
 </body>
-<div class="footer2">
-            © 2022 Hydroclimate Research Group, The Hong Kong Polytechnic University
-            <a href="https://www.shuoswang.com/ourpeople" ><div style="float:right;color:black;margin-right:10px">About Us</div></a>
-</div>
+<div id="footer">CopyRight@copy2012 </div>
 <script>    
     
             var map_32973fe62b464e47937708c8849aef99 = L.map(
