--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css"/>
 </head>
 <body>    
-    
+            <div class='legend-title'>Prix moyen au m2 d'appartemets</div>
             <div class="folium-map" id="map_32973fe62b464e47937708c8849aef99" ></div>
 
 </body>
