--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css"/>
 </head>
 <body>    
-            <div class='legend-title'>Prix moyen au m2 d'appartemets</div>
+            <h3 align="center" style="font-size:30px"><b>China’s Urban Precipitation IDF Curves Considering Climate Change Impacts</b></h3>
             <div class="folium-map" id="map_32973fe62b464e47937708c8849aef99" ></div>
+            <div class="footer2">
+                © 2020 Hydroclimate Research Group, The Hong Kong Polytechnic University
+                <a href="https://www.shuoswang.com/ourpeople" ><div style="float:right;color:black;margin-right:15px">About Us</div></a>
+            </div>
 
 </body>
 <script>    
