--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </head>
   
   <body>
-    <div id="textbox" class="textbox">
+    <div id="textbox1" class="textbox">
       <div class="textbox-content">
         <b>This research project (Project Number: 2022.A6.202.22C) is funded by<br>
         the Public Policy Research Funding Scheme of The Government of the<br> 
@@ -66,11 +66,17 @@
       </div>
     </div>
 
+    <div id="textbox2" class="textbox">
+      <div class="textbox-content">
+        <b>China’s Urban Precipitation IDF Curves Considering Climate Change Impacts</b>
+      </div>
+    </div>
+
 </body>
 </html>
 
 <style type='text/css'>
-  .textbox {
+  .textbox1 {
     position: absolute;
     z-index:9999;
     border-radius:2px;
@@ -83,6 +89,21 @@
     font-size:12px;
     right: 10px;
     bottom: 10px;
+    color: black;
+  }
+  .textbox2 {
+    position: absolute;
+    z-index:9999;
+    border-radius:0px;
+    background: none;
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border: 0px none;
+    padding: 10px;
+    font-size:20px;
+    left: 100px;
+    top: 10px;
     color: black;
   }
 </style>
