--- a/index.html
+++ b/index.html
@@ -65,14 +65,7 @@
         Hong Kong Special Administrative Region.</b>
       </div>
     </div>
-
-    <div id="textbox2" class="textbox">
-      <div class="textbox-content">
-        <b>China’s Urban Precipitation IDF Curves Considering Climate Change Impacts</b>
-      </div>
-    </div>
-
-</body>
+   </body>
 </html>
 
 <style type='text/css'>
@@ -91,12 +84,35 @@
     bottom: 10px;
     color: black;
   }
+</style>
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  </head>
+  
+  <body>
+    <div id="textbox2" class="textbox">
+      <div class="textbox-content">
+        <b>China’s Urban Precipitation IDF Curves Considering Climate Change Impacts</b>
+      </div>
+    </div>
+</body>
+</html>
+
+<style type='text/css'>
   .textbox2 {
     position: absolute;
     z-index:9999;
     border-radius:0px;
     background: none;
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    box-shadow: 0 8px 32px 0 none;
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
     border: 0px none;
@@ -107,6 +123,7 @@
     color: black;
   }
 </style>
+
 </body>
 <script>    
     
